--- a/food/templates/accounts/login.html
+++ b/food/templates/accounts/login.html
@@ -2,11 +2,23 @@ LOGIN PAGE BITCHES
 
 <form method = "POST" action = "{% url 'accounts:login' %}">
     {% csrf_token %}
-    {{form.as_p}}
+    
+    <p>
+        {{form.username.label}}
+        {{form.username}}
+        </p>
+    
+        
+    
+        <p>
+        {{form.password.label}} 
+        {{form.password}}
+        </p>
     {% if request.GET.next  %}
         <input type="hidden" name="next" value="{{request.GET.next}}">
 
     {% endif %}
     <input type="submit" value="Login">
+    <p>Don't have an account? <a href="{% url 'accounts:signup' %}" class="">Sign up</a> </p>
 
 </form>
