--- a/food/templates/accounts/signup.html
+++ b/food/templates/accounts/signup.html
@@ -2,7 +2,38 @@ SIGN UP PAGE BITCHES
 
 <form method = "POST" action = "/accounts/signup/">
     {% csrf_token %}
-    {{form.as_p}}
+    <p>
+    {{form.first_name.label}}
+    {{form.first_name}}
+    </p>
+    <p>
+    {{form.last_name.label}}
+    {{form.last_name}}
+    </p>
+
+    <p>
+    {{form.username.label}}
+    {{form.username}}
+    </p>
+
+    <p>
+    {{form.email.label}}
+    {{form.email}}
+    </p>
+
+    <p>
+    {{form.password1.label}}
+    {{form.password1}}
+    </p>
+
+    <p>
+    {{form.password2.label}}
+    {{form.password2}}
+    </p>
+
+    <p>
     <input type="submit" value="Signup">
+    </p>
+    <p>Already have an account? <a href="{% url 'accounts:login' %}" class="">Login</a> </p>
 
 </form>
