Added a Profile model(phone & add )and updated signup 2.0

--- a/food/templates/accounts/order_history.html
+++ b/food/templates/accounts/order_history.html
@@ -109,7 +109,7 @@ hr.below-tot{
 {% include 'partials/_navbar.html' %}
 <br>
 
-<div class="page-head">Your Order History, {{user.username}}</div>
+<div class="page-head">Your Order History, {{user.first_name}}</div>
 <table class="table4">
     <tr>
       <td class="new1">
