--- a/food/templates/accounts/signup.html
+++ b/food/templates/accounts/signup.html
@@ -22,6 +22,15 @@ SIGN UP PAGE BITCHES
     </p>
 
     <p>
+        {{profile_form.phone.label}}
+        {{profile_form.phone}}
+        </p>
+        <p >
+            {{profile_form.address.label}}
+            {{profile_form.address}}
+            </p>
+
+    <p>
     {{form.password1.label}}
     {{form.password1}}
     </p>
