--- a/food/templates/accounts/login.html
+++ b/food/templates/accounts/login.html
@@ -1,24 +1,171 @@
-LOGIN PAGE BITCHES
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
+    @import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
 
-<form method = "POST" action = "{% url 'accounts:login' %}">
-    {% csrf_token %}
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Quicksand, sans-serif;
+    background-color: rgb(245, 199, 143);
+    margin: 0px;
+    padding: 0px;
+}
+
+.title {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: Cinzel;
+    margin-bottom: 4%;
+    margin-top: -3%;
+    font-size: 250%;
+    color: rgb(44, 45, 46);
+}
+
+.card {
+    box-shadow: 8px 7px 7px 0px rgba(0,0,0,0.3);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 460px;
+    width: 1000px;
+    background-color: white;
     
-    <p>
-        {{form.username.label}}
-        {{form.username}}
-        </p>
-    
+}
+
+.card > .left {
+    background-image: url('https://agentpekka.com/wp-content/uploads/2015/05/AP_Sanna_Mander_SmartSalt_2x.jpg');
+    background-position: bottom;
+    background-size: cover;
+  width:600px;
+}
+
+.card > .right {
+    display: flex;
+    align-items: center;
+    padding: 0 2rem;
+}
+
+form {
+    width: 100%;
+}
+
+.form-input {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.form-input > label {
+    color: #2C3A47;
+    font-weight: bold;
+    margin: 0;
+    text-transform: uppercase;
+    transition: color 0.3s ease-in-out;
+}
+
+.form-input > input[type="text"]:focus + label,
+.form-input > input[type="password"]:focus + label {
+    color:  rgb(248, 53, 53);;
+}
+
+form input {
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.form-input > input[type="text"],
+.form-input > input[type="password"] {
+    border: none;
+    border-bottom: 2px solid #2C3A47;
+    height: 30px;
+    outline: none;
+    transition: border-bottom .3s ease-in-out;
+}
+
+.form-input > input[type="text"]:focus,
+.form-input > input[type="password"]:focus {
+    border-bottom: 2px solid  rgb(248, 53, 53);
+}
+
+.btn {
+    background-color: rgb(14, 63, 109);
+    border: none;
+    border-radius: 20px;
+    color: #FFF;
+    font-weight: bold;
+    font-family: Quicksand;
+    cursor: pointer;
+    font-size: 1.3rem;
+    height: 40px;
+    line-height: 40px;
+    transition: background-color 0.3s ease-in-out,
+                box-shadow .3s ease-in-out,
+                transform .3s ease-in-out;
+}
+
+.btn:hover {
+    background-color: rgb(248, 53, 53);
+    box-shadow: 0 5px 10px rgba(0,0,0,.3);
+    transform: translateY(-3px);
+}
+
+.forgot-password {
+    color: #000;
+    font-size: .8rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: letter-spacing .3s ease-in-out;
+}
+
+.forgot-password:hover {
+  letter-spacing: 1px;
+}
+.container{
+    margin:0px;
+    padding:0px;
+}
+.forg-pass{
+    margin-top: 5%;
+    font-size: larger;
+}
+a{
+    text-decoration: none;
+    color: rgb(14, 63, 109);
+    font-weight: bold;
+    font-size: 105%;
+}
+</style>
+
+<div class="container">
+    <h1 class="title">&nbsp;
+        <i class="fas fa-pizza-slice"></i>
         
-    
-        <p>
-        {{form.password.label}} 
-        {{form.password}}
-        </p>
-    {% if request.GET.next  %}
+        Food For Good
+        <i class="fa fa-heart" aria-hidden="true"></i></h1>
+    <div class="card">
+      <div class="left"></div>
+      <div class="right">
+        <form method = "POST" action = "{% url 'accounts:login' %}">
+            {% csrf_token %}
+          <div class="form-input">
+            {{form.username}}
+            <label for="username">username</label>
+            
+          </div>
+          <div class="form-input">
+            {{form.password}}
+            <label for="password">password</label>
+          </div>
+          {% if request.GET.next  %}
         <input type="hidden" name="next" value="{{request.GET.next}}">
 
     {% endif %}
-    <input type="submit" value="Login">
-    <p>Don't have an account? <a href="{% url 'accounts:signup' %}" class="">Sign up</a> </p>
+    <input class="btn" type="submit" value="Login">
+    <div class="forg-pass">Don't have an account? <a href="{% url 'accounts:signup' %}" class="">Sign up</a> </div>
 
 </form>
+      </div>
+    </div>
+  </div>
+
