--- a/food/templates/accounts/order_summary.html
+++ b/food/templates/accounts/order_summary.html
@@ -4,7 +4,7 @@
 
 {% include 'partials/_navbar.html' %}
 
-<style>
+<style>@import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
 
     body{
         background-color: beige ;
@@ -48,6 +48,22 @@
     }
     
     tr:hover {background-color:rgb(209, 186, 164);}
+
+    .add-txt{
+        margin-top: 5%;
+        margin-left: 15%;
+        margin-right: 20%;
+        font-family: sans-serif;
+        font-size: 140%;
+    }
+    .mob-txt{
+        margin-top: 2%;
+        margin-left: 15%;
+        margin-right: 20%;
+        font-family: sans-serif;
+        font-size: 140%;
+
+    }
     </style>
 
 
@@ -97,7 +113,7 @@
     <th></th>
     <th></th>
     <th><h2 style="margin-top: 5px;">TOTAL </h2></th>
-    <th><h2  style="margin-top: 5px;">{{order.total}}</h2</th>
+    <th><h2  style="margin-top: 5px;">Rs. {{order.total|floatformat:"0"}}</h2</th>
     <th><button class="chk-out"><a class= "chk" href="{% url 'accounts:checkout' %}">Checkout</a></button></th>
   </tr>
   
@@ -107,4 +123,8 @@
 
   {% endif %}
 
+        <div class="add-txt"><b>ADDRESS </b>- {{user.profile.address}}</div>
+
+       <div class="mob-txt"><b> MOBILE NUMBER </b>- +91 {{user.profile.phone}}</div>
 </div>
+
