--- a/food/templates/accounts/signup.html
+++ b/food/templates/accounts/signup.html
@@ -1,48 +1,228 @@
-SIGN UP PAGE BITCHES
 
-<form method = "POST" action = "/accounts/signup/">
-    {% csrf_token %}
-    <p>
-    {{form.first_name.label}}
-    {{form.first_name}}
-    </p>
-    <p>
-    {{form.last_name.label}}
-    {{form.last_name}}
-    </p>
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
+    @import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
 
-    <p>
-    {{form.username.label}}
-    {{form.username}}
-    </p>
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Quicksand, sans-serif;
+    background-color: rgb(245, 199, 143);
+    margin: 0px;
+    padding: 0px;
+    height: 100%;
+}
 
-    <p>
-    {{form.email.label}}
-    {{form.email}}
-    </p>
+.title {
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 1%;
+    margin-top: 0.5%;
+   font-family: Cinzel;
+    font-size: 250%;
+    color: rgb(44, 45, 46);
+}
 
-    <p>
-        {{profile_form.phone.label}}
-        {{profile_form.phone}}
-        </p>
-        <p >
-            {{profile_form.address.label}}
+.card {
+    box-shadow: 8px 7px 7px 0px rgba(0,0,0,0.3);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 550px;
+    width: 1000px;
+    background-color: white;
+    border-radius: 10px;
+    
+}
+
+.card > .left {
+    background-image: url('https://agentpekka.com/wp-content/uploads/2015/09/AP_Sanna_Mander_DubaiExpo_2x.jpg');
+    background-position: bottom;
+    background-size: cover;
+  width:400px;
+  margin-left: 10%;
+}
+
+.card > .right {
+    display: flex;
+    align-items: center;
+    padding: 0 2rem;
+    width:400px;
+}
+
+form {
+    width: 100%;
+}
+
+.form-input {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.form-input > label {
+    color: #2C3A47;
+    font-weight: bold;
+    margin: 0;
+    text-transform: uppercase;
+    transition: color 0.3s ease-in-out;
+}
+
+.form-input > input[type="text"]:focus + label,
+.form-input > input[type="password"]:focus + label,
+.form-input > input[type="email"]:focus + label {
+    color:  rgb(248, 53, 53);;
+}
+
+form input {
+    margin-bottom: 20px;
+    width: 90%;
+   
+}
+
+.form-input > input[type="text"],
+.form-input > input[type="password"],
+.form-input > input[type="email"] {
+    border: none;
+    border-bottom: 2px solid #2C3A47;
+    height: 30px;
+    outline: none;
+    transition: border-bottom .3s ease-in-out;
+}
+
+.form-input > input[type="text"]:focus,
+.form-input > input[type="password"]:focus {
+    border-bottom: 2px solid  rgb(248, 53, 53);
+}
+
+.btn {
+    background-color: rgb(14, 63, 109);
+    border: none;
+    border-radius: 20px;
+    color: #FFF;
+    font-weight: bold;
+    font-family: Quicksand;
+    cursor: pointer;
+    font-size: 1.3rem;
+    margin-top: 5%;
+    height: 40px;
+    line-height: 40px;
+    transition: background-color 0.3s ease-in-out,
+                box-shadow .3s ease-in-out,
+                transform .3s ease-in-out;
+}
+
+.btn:hover {
+    background-color: rgb(248, 53, 53);
+    box-shadow: 0 5px 10px rgba(0,0,0,.3);
+    transform: translateY(-3px);
+}
+
+.forgot-password {
+    color: #000;
+    font-size: .8rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: letter-spacing .3s ease-in-out;
+}
+
+.forgot-password:hover {
+  letter-spacing: 1px;
+}
+.container{
+    margin:0px;
+    padding:0px;
+}
+.forg-pass{
+    margin-top: 5%;
+    font-size: larger;
+}
+a{
+    text-decoration: none;
+    color: rgb(14, 63, 109);
+    font-weight: bold;
+    font-size: 105%;
+}
+.float-container {
+    width: 100%;
+    margin-top: 2%;
+}
+
+.float-child {
+    width: 50%;
+    float: left;
+    
+    
+}  
+</style>
+
+<div class="container">
+    <h1 class="title">
+        <i class="fas fa-pizza-slice"></i>
+        
+        Food For Good
+        <i class="fa fa-heart" aria-hidden="true"></i></h1>
+    <div class="card">
+      <div class="left"></div>
+      <div class="right">
+        <form method = "POST" action = "/accounts/signup/">
+            {% csrf_token %}
+            <div style="margin-top:3%" class="float-container">
+          <div class="form-input float-child">
+            {{form.first_name}}
+            <label for="username">First Name</label>
+            
+          </div>
+          <div class="form-input float-child">
+            {{form.last_name}}
+            <label for="username">Last Name</label>
+            
+          </div>
+        </div>
+        <div class="float-container">
+          <div class="form-input float-child">
+            {{form.username}}
+            <label for="username">Username</label>
+            
+          </div>
+          <div class="form-input float-child">
+            {{profile_form.phone}}
+            <label for="username">Mobile Number</label>
+            
+          </div>
+          
+        </div>
+        <div  class="form-input float-container">
+            {{form.email}}
+            <label  for="username">Email</label>
+            
+          </div>
+         
+          <div class="form-input float-container">
             {{profile_form.address}}
-            </p>
-
-    <p>
-    {{form.password1.label}}
-    {{form.password1}}
-    </p>
-
-    <p>
-    {{form.password2.label}}
-    {{form.password2}}
-    </p>
-
-    <p>
-    <input type="submit" value="Signup">
-    </p>
-    <p>Already have an account? <a href="{% url 'accounts:login' %}" class="">Login</a> </p>
+            <label style="margin-bottom: 2%;" for="username">Address</label>
+            
+          </div>
+          <div style="margin-top:5%" class="float-container">
+          <div class="form-input float-child">
+            {{form.password1}}
+            <label for="username">Password</label>
+            
+          </div>
+          <div class="form-input float-child">
+            {{form.password2}}
+            <label for="username">Confirm Password</label>
+            
+          </div>
+        </div>
+         
+         
+          <input class="btn" type="submit" value="Signup">
+    <div class="forg-pass">Already have an account?   <a href="{% url 'accounts:login' %}" class="">Login</a> </div>
 
 </form>
+      </div>
+    </div>
+  </div>
+
